# tractome

./: .gitignore  CNAME  COPYING.txt  CREDITS.txt  README.md  Tractome.cer  Ui_mainwindow.py  dissimilarity_common.py  event_hook.py  glwidget.py  guillotine.py  help.txt  index.html  lap_slave.py  linux64_conda_env_tractome.yml  main.py  mainwindow.py  mainwindow.ui  manipulator.py  params.json  pyproject.toml  requirements.txt  rois.py  ruff.toml  signature-macos.sh  streamshow.py  track.py  tractome.py
Tractome.app/Contents/: Info.plist
Tractome.app/Contents/MacOS/: Tractome
Tractome.app/Contents/Resources/: dissimilarity_common.py  glwidget.py  rois.py  tractome.icns  tractome.py
Tractome.app/Contents/Resources/tractome/: Ui_mainwindow.py  manipulator.py  tractome.py
javascripts/: main.js
old/: app.py
requirements/: default.txt  dev.txt  optional.txt  parallel.txt
stylesheets/: stylesheet.css
tools/: generate_requirements.py
tractome/: __init__.py  __main__.py  app.py  cli.py  compute.py  io.py  main.py  mem.py  track.py  ui.py  viz.py
tractome/assets/: style.qss
tractome/assets/images/: logo.icns
tractome/gpu/: __init__.py  projection.py
tractome/gpu/shaders/: project_points.wgsl
tractome/mem/: __init__.py  _input_manager.py  _state_manager.py  _visualization_manager.py
tractome/ui/: __init__.py  _control_section.py  _input_section.py  _paths.py  _views.py  _visualization_section.py  utils.py
