[project]
name = "tractome"
description = "Imaging tool for brain analysis"
license = { file = "COPYING.txt" }
requires-python = ">=3.10"
readme = "README.md"
version = "2.0.0.dev0"
dependencies = [
  "dipy>=1.11.0",
  "click>=8.1.8",
  "PySide6>=6.9.0",
  "plyfile>=1.1",
]

[project.optional-dependencies]
parallel = ["ray>=2.46.0"]

[project.scripts]
tractome_transform_tract = "tractome.track:transform_tract"
