[project]
name = "tractome"
description = "Imaging tool for brain analysis"
license = "BSD-3-Clause"
license-files = ["COPYING.txt"]
requires-python = ">=3.12,<3.13"
readme = "README.md"
version = "2.0.0.dev0"
dependencies = [
  "dipy>=1.11.0",
  "click>=8.1.8",
  "PySide6>=6.10.0",
  "fury>=2.0.0a6",
  "trimesh>=4.6.12",
  "scikit-learn>=1.7.1"
]
[project.optional-dependencies]
parallel = ["ray>=2.47.0", "numba>=0.61.2"]
dev = ["ruff>=0.12.7", "pre-commit"]
optional = ["tractome[parallel]", "tractome[dev]"]

[project.scripts]
tractome = "tractome.cli:tractome"
tractome_compute_dis_matrix = "tractome.cli:compute_dissimilarity_matrix"

[tool.setuptools.package-data]
tractome = [
  "assets/*.qss",
  "assets/images/*.ico",
  "assets/images/*.icns",
  "assets/icons/*.svg",
  "assets/images/*.png",
]

[tool.briefcase]
project_name = "Tractome"
bundle = "org.tractome"
version = "2.0.0.dev0"
url = "https://tractome.org"
license = "BSD-3-Clause"
license-files = ["COPYING.txt"]
author = "Tractome contributors"

[tool.briefcase.app.tractome]
formal_name = "Tractome"
description = "Imaging tool for brain analysis"
icon = "tractome/assets/images/logo"
long_description = """Interactive clustering-based 3D tool for exploration and segmentation of tractography data.
"""
sources = ["tractome"]
requires = [
  "dipy>=1.11.0",
  "PySide6>=6.10.0",
  "fury>=2.0.0a6",
  "trimesh>=4.6.12",
  "scikit-learn>=1.7.1",
  "ray>=2.47.0",
  "numba>=0.61.2",
]

[tool.briefcase.app.tractome.windows]

[tool.briefcase.app.tractome.macOS]
min_os_version = "14.0"
universal_build = false

[tool.briefcase.app.tractome.linux]
